# smart_mcp

./: .gitignore  .mcp.json  .mcp.json.backup.20251016_164528  CLAUDE.md  MEMORY_CHECKPOINT_REMINDER.md  README.md  launch-claude-here.command  pyproject.toml  setup-claude-chroma.command  shortcuts.json  smart_mcp.py  start-claude-chroma.sh
.claude/: settings.local.json.backup.20251016_164528
.claude/commands/: README.md  sm:audit.md  sm:debug.md  sm:refactor.md
.claude/commands/sm/: audit.md  debug.md  refactor.md
docs/: ADVISORY-MODE-UPDATE.md  COMMAND_DESIGN_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  FOR_FUTURE_CLAUDE.md  GLOBAL_SETUP.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  INTEGRATED-LEAN-PLAN.md  PATH_A_VALIDATION_COMPLETE.md  SKILL_BEST_PRACTICES.md  WEEK4_MONITORING_FRAMEWORK.md
docs/introspection/20251022_114733/: introspection-report.md  recommendations.md
docs/preaudit/: PRE_AUDIT_SUMMARY.md  api-validation.json  ci-signals.json  config-sources.md  error-surface.md  file-inventory.json  frameworks.json  hotspots.md  maturity.json  repo-shape.json  state-map.md  test-landscape.md
global/: CLAUDE.md  MCP_SmartMCP.md
global/commands/sm/: audit.md  debug.md  introspect.md  refactor.md
global/smart_mcp/: shortcuts.json
scripts/: backup.sh  install.sh  sync.sh
templates/: CLAUDE.md.tpl
tests/: test_smart_mcp_coach.md  tool-selector-validation.md
